# cdpkit-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
cdpkit/: Cargo.toml  LICENSE-MIT  README.md
cdpkit/examples/: README.md  basic.rs  dom.rs  evaluate.rs  events.rs  network.rs  screenshot.rs
cdpkit/src/: cdp.rs  error.rs  inner.rs  lib.rs  listeners.rs  protocol.rs  types.rs
cdpkit/tests/: integration.rs
cdpkit_codegen/: Cargo.toml
cdpkit_codegen/protocol/: README.md
cdpkit_codegen/src/: fetch.rs  generator.rs  lib.rs  parser.rs
cdpkit_codegen/tests/: generator_golden.rs
cdpkit_codegen/tests/fixtures/: mini_protocol.json
cdpkit_codegen/tests/goldens/: command_builder.rs  enum_mode.rs  event_subscription.rs  inspect_command.rs  keyword_carrier.rs  mini_protocol.rs  set_auto_attach.rs
docs/: README.zh.md  connect-existing-chrome.md  connect-existing-chrome.zh.md
