[workspace]
members = [
    "cdpkit",
    "cdpkit_codegen",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yie1d/cdpkit-rs"
authors = ["yie1d <myie1d.dev@gmail.com>"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "io-util", "time"] }
tokio-tungstenite = "0.28"
tokio-stream = "0.1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
heck = "0.5"
reqwest = { version = "0.13" } # only used by cdpkit_codegen (publish = false), not by cdpkit runtime
