[package]
name = "cdpkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Type-safe Chrome DevTools Protocol (CDP) client for Rust"
keywords = ["chrome", "devtools", "cdp", "automation", "browser"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
base64 = "0.22"

[build-dependencies]
# Build script will be added later for code generation
