[package]
name = "cdpkit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Type-safe Chrome DevTools Protocol (CDP) client for Rust"
keywords = ["chrome", "devtools", "cdp", "protocol", "browser"]
categories = ["web-programming", "api-bindings"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
base64 = "0.22"
tokio-tungstenite = { workspace = true }
tokio = { workspace = true }
