[package]
name = "cdpkit_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Code generator for cdpkit (internal tool)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
heck = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
